--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-     "build": "next build --no-lint",
+    "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +17,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-signature-canvas": "^1.1.0-alpha.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
     "@types/react-signature-canvas": "^1.0.7",
     "eslint": "^9",
